--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
     <link rel="stylesheet" href="css/responsive.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
    
-    <title>Blue Team</title>
+    <title>بلو تيم - أول مغسلة ومخفي سيارات متنقلة في ابوظبي</title>
+    <meta name="description" content=" بلو تيم أول شركة غسيل سيارات متنقل في الدولة، قمنا بغسيل وصيانة السيارات الاف المرات ونقدم خدمات المخفي بإتقان، أحصل على خدمة كاملة لغسيل سيارتك في منزلك">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
