--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <link rel="canonical" href="https://blueteamuae.com/" />
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Muli:300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;display=swap" rel="stylesheet">
@@ -21,7 +17,17 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
    
     <title>بلو تيم - أول مغسلة ومخفي سيارات متنقلة في ابوظبي</title>
-    <meta name="description" content=" بلو تيم أول شركة غسيل سيارات متنقل في الدولة، قمنا بغسيل وصيانة السيارات الاف المرات ونقدم خدمات المخفي بإتقان، أحصل على خدمة كاملة لغسيل سيارتك في منزلك">
+    <meta name="description" content="بلو تيم أول شركة غسيل سيارات متنقل في الدولة، قمنا بغسيل وصيانة السيارات الاف المرات ونقدم خدمات المخفي بإتقان، أحصل على خدمة كاملة لغسيل سيارتك في منزلك">
+    <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Car Wash Under 5 Minutes at Mushrif Mall, Abu Dhabi - Express Auto Wash" />
+    <meta property="og:description" content="Blue Team Car Wash provides a car wash at door step! We offer professional car wash services using the latest American technology. You book. We wash." />
+    <meta property="og:url" content="https://blueteamuae.com/" />
+    <meta property="og:site_name" content="Blue Team Car Wash" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:label1" content="Est. reading time" />
+    <meta name="twitter:data1" content="14 minutes" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
