--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
     <link rel="canonical" href="https://blueteamuae.com/" />
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900;1000&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli:300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="stylesheet" href="style.css">
@@ -39,6 +42,6 @@
   <script src="code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="masonry.desandro.com/masonry.pkgd.js"></script>
 	<script src="stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-	<script src="js/jqueryCustome.js"></script>
+	<!-- <script src="js/jqueryCustome.js"></script> -->
   </body>
 </html>
