--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
     <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Car Wash Under 5 Minutes at Mushrif Mall, Abu Dhabi - Express Auto Wash" />
-    <meta property="og:description" content="Blue Team Car Wash provides a car wash at door step! We offer professional car wash services using the latest American technology. You book. We wash." />
+    <meta property="og:title" content="بلو تيم أول شركة غسيل سيارات متنقل في الدولة، قمنا بغسيل وصيانة السيارات الاف المرات ونقدم خدمات المخفي بإتقان، أحصل على خدمة كاملة لغسيل سيارتك في منزلك" />
+    <meta property="og:description" content="Blue Team Car Wash provides a car wash at door step! We offer professional car wash services using the latest technology. You book. We wash." />
     <meta property="og:url" content="https://blueteamuae.com/" />
     <meta property="og:site_name" content="Blue Team Car Wash" />
     <meta name="twitter:card" content="summary_large_image" />
